--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "cypress": "^13.5.1",
+    "cypress-mochawesome-reporter": "^3.6.1",
+    "cypress-on-fix": "^1.0.2",
     "cypress-terminal-report": "^5.3.9",
     "prettier": "^3.0.3"
   }
